--- a/Assessment1_Haset_Wendesen_Section4/index.html
+++ b/Assessment1_Haset_Wendesen_Section4/index.html
@@ -36,12 +36,12 @@
                 <p class="price">$19.99</p>
             </article>
             <article class="product">
-                <img src="asset/static/image/image-2.jpg" class="image-wrapper"   alt="product 2">
+                <img src="asset/static/image/image-2.jpg" class="image-container"   alt="product 2">
                 <h3>product Title 2</h3>
                 <p>Description of product 2. This product is better!</p>
                 <p class="price">$29.99</p>
             </article>
-            <article class="product">
+            <article class="product display">
                 <img src="asset/static/image/image-3.jpg"class="image-container" alt="product 3">
                 <h3>product Title 3</h3>
                 <p>Description of product 3. Dont't miss this great deal!</p>
@@ -58,7 +58,7 @@
 
             </article>
             <article class="product">
-                <img src="asset/static/image/image-5.jpg" class="image-wrapper" alt="product 5">
+                <img src="asset/static/image/image-5.jpg" class="image-container" alt="product 5">
                 <h3>product Title 5</h3>
                 <p>Description of product 5. This product is better!</p>
                 <p class="price">$29.99</p>
@@ -82,7 +82,7 @@
 
             </article>
             <article class="product">
-                <img src="asset/static/image/image-8.jpg" class="image-wrapper" alt="product 8">
+                <img src="asset/static/image/image-8.jpg" class="image-container" alt="product 8">
                 <h3>product Title 8</h3>
                 <p>Description of product 8. This product is better!</p>
                 <p class="price">$29.99</p>
